# image2svg-mcp

./: .mcp.json  Dockerfile  LICENSE  NOTICE  README.md  glama.json  lhm.plugin.json  llms-install.md  pyproject.toml  server.json
.github/workflows/: docker.yml  publish.yml  python-package.yml  tests.yml
scripts/: bump.sh
src/image2svg_mcp/: __main__.py  convert.py  server.py
tests/: conftest.py  test_convert.py  test_server.py
