[project]
name = "image2svg-mcp"
version = "1.0.0"
description = "MCP server that converts raster images (PNG/JPG/WEBP) to SVG vector format"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "botmonster", email = "btm@botmonster.com" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = [
    "mcp",
    "svg",
    "vector",
    "image",
    "conversion",
    "raster",
    "tracing",
    "claude",
    "llm",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "vtracer>=0.6.15",
]

[project.urls]
Homepage = "https://botmonster.com/image2svg"
Repository = "https://github.com/botmonster/image2svg-mcp"
Issues = "https://github.com/botmonster/image2svg-mcp/issues"

[project.scripts]
image2svg-mcp = "image2svg_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "flake8>=7.0"]
